--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
     <properties>
         <apacheds.version>2.0.0-M21</apacheds.version>
         <bcprov.version>1.54</bcprov.version>
+        <bval.version>1.1.1</bval.version>
         <commons.lang.version>3.4</commons.lang.version>
         <commons.logging.version>1.2</commons.logging.version>
         <commons.io.version>2.4</commons.io.version>
@@ -48,7 +49,6 @@
         <easymock.version>3.4</easymock.version>
         <ecj.version>4.4.2</ecj.version>
         <ehcache.version>2.9.0</ehcache.version>
-        <hibernate.version>5.2.2.Final</hibernate.version>
         <httpclient.version>4.3.5</httpclient.version>
         <hsqldb.version>2.3.3</hsqldb.version>
         <htmlunit.version>2.19</htmlunit.version>
