--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     </prerequisites>
 
     <properties>
-        <apacheds.version>2.0.0-M21</apacheds.version>
+        <apacheds.version>2.0.0-M22</apacheds.version>
         <bcprov.version>1.54</bcprov.version>
         <bval.version>1.1.1</bval.version>
         <commons.lang.version>3.4</commons.lang.version>
@@ -68,7 +68,7 @@
         <spring.security.version>3.2.9.RELEASE</spring.security.version>
         <tomcat7.version>7.0.70</tomcat7.version>
         <tomcat8.version>8.0.36</tomcat8.version>
-        <wss4j.version>2.1.6-SNAPSHOT</wss4j.version>
+        <wss4j.version>2.1.6</wss4j.version>
         <xalan.version>2.7.2</xalan.version>
 
         <tomcat.url>http://localhost:8080/manager/text</tomcat.url>
