FEDIZ-169 - Enforce mandatory requested claims on the RP side

--- a/systests/webapps/springPreauthWebapp/src/main/webapp/WEB-INF/web.xml
+++ b/systests/webapps/springPreauthWebapp/src/main/webapp/WEB-INF/web.xml
@@ -107,6 +107,9 @@
 	<security-role>
 		<role-name>Authenticated</role-name>
 	</security-role>				
+	<security-role>
+		<role-name>Secretary</role-name>
+	</security-role>				
 
 	<security-constraint>
 		<web-resource-collection>
