--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <commons.logging.version>1.2</commons.logging.version>
         <commons.io.version>2.5</commons.io.version>
         <commons.validator.version>1.5.1</commons.validator.version>
-        <cxf.version>3.1.7-SNAPSHOT</cxf.version>
+        <cxf.version>3.1.7</cxf.version>
         <cxf.build-utils.version>3.2.0</cxf.build-utils.version>
         <easymock.version>3.4</easymock.version>
         <ecj.version>4.5.1</ecj.version>
