--- a/plugins/jetty8/pom.xml
+++ b/plugins/jetty8/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
         <artifactId>plugin</artifactId>
-        <version>1.3.2-SNAPSHOT</version>
+        <version>1.3.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>fediz-jetty8</artifactId>
