Cors support for js OIDC Implicit Flow
Provide OOB support for Cors request on all
endpoints used by javascript clients.

--- a/services/oidc/pom.xml
+++ b/services/oidc/pom.xml
@@ -58,6 +58,11 @@
             <version>${cxf.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-rs-security-cors</artifactId>
+            <version>${cxf.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>${spring.version}</version>
