--- a/systests/pom.xml
+++ b/systests/pom.xml
@@ -42,6 +42,7 @@
       <module>cxf</module>
       <module>federation</module>
       <module>kerberos</module>
+      <module>ldap</module>
       <module>oidc</module>
       <module>samlsso</module>
    </modules>
