--- a/systests/federation/pom.xml
+++ b/systests/federation/pom.xml
@@ -31,9 +31,11 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>samlWebapp</module>
         <module>samlIdpWebapp</module>
         <module>oidcIdpWebapp</module>
         <module>wsfed</module>
+        <!--<module>samlsso</module>-->
     </modules>
 
 </project>
