--- a/systests/federation/pom.xml
+++ b/systests/federation/pom.xml
@@ -35,7 +35,7 @@
         <module>samlIdpWebapp</module>
         <module>oidcIdpWebapp</module>
         <module>wsfed</module>
-        <!--<module>samlsso</module>-->
+        <module>samlsso</module>
     </modules>
 
 </project>
