--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <commons.validator.version>1.5.1</commons.validator.version>
         <cxf.version>3.1.8</cxf.version>
         <cxf.build-utils.version>3.2.0</cxf.build-utils.version>
+        <dbcp.version>2.1.1</dbcp.version>
         <easymock.version>3.4</easymock.version>
         <ecj.version>4.6.1</ecj.version>
         <ehcache.version>2.10.3</ehcache.version>
