--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -219,9 +219,9 @@
         </dependency>
         -->
         <dependency>
-            <groupId>commons-dbcp</groupId> 
-            <artifactId>commons-dbcp</artifactId>
-            <version>1.4</version>
+            <groupId>org.apache.commons</groupId> 
+            <artifactId>commons-dbcp2</artifactId>
+            <version>${dbcp.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.openjpa</groupId>
