Removing most of the logging output to the console

--- a/systests/cxf/src/test/resources/logging.properties
+++ b/systests/cxf/src/test/resources/logging.properties
@@ -35,7 +35,7 @@
 # By default we only configure a ConsoleHandler, which will only
 # show messages at the WARNING and above levels.
 #handlers= java.util.logging.ConsoleHandler
-handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
+#handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 
 # Default global logging level.
 # This specifies which kinds of events are logged across
