--- a/systests/samlsso/src/test/resources/logging.properties
+++ b/systests/samlsso/src/test/resources/logging.properties
@@ -15,7 +15,7 @@
 # Note that these classes must be on the system classpath.
 # By default we only configure a ConsoleHandler, which will only
 # show messages at the WARNING and above levels.
-handlers= java.util.logging.ConsoleHandler
+#handlers= java.util.logging.ConsoleHandler
 #handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 
 # Default global logging level.
