Use HttpOnly for cookie-config

--- a/services/idp/src/main/webapp/WEB-INF/web.xml
+++ b/services/idp/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,9 @@ under the License.
 	<display-name>Fediz IDP</display-name>
 	
 	<session-config>
+	    <cookie-config>
+            <http-only>true</http-only>
+        </cookie-config>
 		<tracking-mode>COOKIE</tracking-mode>
 	</session-config>
 
